...

        Text(text = user.email, style = MaterialTheme.typography.bodyMedium)

        Spacer(modifier = Modifier.weight(1f))

        AppButton(
            text = "Logout",
            onClick = { onAction(ProfileAction.OnLogoutClick) },
        )

        Spacer(modifier = Modifier.height(16.dp))
    }
}
...
