appId: com.template.project
---
- launchApp:
    clearState: true

- tapOn: "Username"
- inputText: "emilys"
- tapOn: "Password"
- inputText: "emilyspass"
- hideKeyboard
- tapOn: "Sign In"
- extendedWaitUntil:
    visible: "Home"
    timeout: 10000

- tapOn: "Search"
- assertVisible: "Search products..."
- tapOn: "Search products..."
- inputText: "Essence"
- hideKeyboard
- assertVisible: "Clear"
- tapOn: "Clear"
