appId: com.template.project
---
- launchApp:
    clearState: true

- tapOn: "Username"
- inputText: "emilys"
- tapOn: "Password"
- inputText: "emilyspass"
- hideKeyboard
- tapOn: "Sign In"
- extendedWaitUntil:
    visible: "Home"
    timeout: 10000

- tapOn: "Settings"
- assertVisible: "Appearance"
- tapOn: "Dark"
- tapOn: "Light"
- tapOn: "System Default"
